# sentinel

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  podman-compose.phase1.yaml  podman-compose.yaml  pyproject.toml  run_security_tests.sh  test_results.md
.github/workflows/: ci.yml
archive/: 2026-02-15_215402_infrastructure-overhaul-plan.md
benchmarks/: README.md
container/: Containerfile  Containerfile.sandbox  entrypoint.sh  radicale.conf
controller/: Dockerfile  requirements.txt
controller/app/: approval.py  audit.py  auth.py  codeshield.py  config.py  conversation.py  main.py  models.py  orchestrator.py  pipeline.py  planner.py  policy_engine.py  prompt_guard.py  provenance.py  scanner.py  session.py  tools.py  worker.py
controller/tests/: conftest.py  test_approval.py  test_codeshield.py  test_conversation.py  test_encoding_scanner.py  test_hardening.py  test_hostile.py  test_input_validation.py  test_orchestrator.py  test_pin_auth.py  test_pipeline.py  test_planner.py  test_policy_engine.py  test_prompt_guard.py  test_provenance.py  test_scanner.py  test_spotlighting.py  test_tools.py  test_worker.py
docs/: CHANGELOG.md  PROJECT_DOCS.md  architecture.md  codebase-map.md  deploy-new-stack.md  deployment.md  roadmap.md  security-model.md
docs/archive/: 2026-02-12_code-review.md  2026-02-12_phase4a-signal-mqtt-plan.md  2026-02-12_security-test-audit.jsonl  2026-02-12_security-test-raw-output.txt  2026-02-12_security-test-report.md  (+15 more)
gateway/: Dockerfile  nginx.conf
memory/: MEMORY.md
policies/: sentinel-policy.yaml
scripts/: ab_benchmark_compare.py  ab_benchmark_results.sh  analyse_benchmark_results.py  analyse_functional_results.py  analyse_pipeline_results.py  analyse_red_team.py  analyse_v3_results.py  functional_test_build.py  functional_test_debug.py  functional_test_deps.py  functional_test_e2e.py  functional_test_plans.py  functional_test_security_tax.py  functional_test_smoke.py  mini_gsuite_results.sh  mini_stress_test.py  rebuild-container.sh  red_team_b1_5_v2.py  red_team_b1_v2.py  red_team_b2_v2.py  red_team_b3_v2.sh  red_team_b4_v2.py  red_team_b5_v2.py  red_team_lib.py  run_ab_benchmark.sh  run_benchmark.sh  run_episodic_eval.sh  run_full_validation.sh  run_functional_tests.sh  run_mini_benchmark.sh  run_mini_gsuite.sh  run_pipeline.sh  run_red_team.sh  run_stress_test.sh  run_stress_test_v3.sh  run_validation.sh  runner_lib.sh  sentinel-watchdog.sh  smoke_test.sh  stress_test.py  (+2 more)
sentinel/: __init__.py
sidecar/: Cargo.toml  ironclaw-full-capability-assessment.md
sidecar/src/: capabilities.rs  config.rs  host_functions.rs  http_client.rs  leak_detector.rs  main.rs  protocol.rs  registry.rs  sandbox.rs
sidecar/tests/: integration.rs
sidecar/tools/common/: Cargo.toml
sidecar/tools/common/src/: lib.rs
sidecar/tools/file-read/: Cargo.toml
sidecar/tools/file-read/src/: main.rs
sidecar/tools/file-write/: Cargo.toml
sidecar/tools/file-write/src/: main.rs
sidecar/tools/http-fetch/: Cargo.toml
sidecar/tools/http-fetch/src/: main.rs
sidecar/tools/shell-exec/: Cargo.toml
sidecar/tools/shell-exec/src/: main.rs
sidecar/wasm/: file_read.toml  file_write.toml  http_fetch.toml  shell_exec.toml
tests/: adversarial_prompts.py  conftest.py  test_a2a.py  test_adversarial_coverage.py  test_analyse_benchmark_results.py  test_analyse_red_team.py  test_anchor_allocator.py  test_anchor_allocator_integration.py  test_approval.py  test_approval_pg.py  test_audit_immutability.py  test_auth_hardening.py  test_bus.py  test_camel_trust_property.py  test_canonical.py  test_channel_injection.py  test_channels.py  test_code_extractor.py  test_code_fixer.py  test_code_fixer_integration.py  test_codeshield.py  test_concurrent_sqlite.py  test_confirmation.py  test_confirmation_integration.py  test_constraint_validator.py  test_contact_api.py  test_contact_resolver.py  test_contact_store.py  test_context_classifier.py  test_conversation.py  test_conversation_remediation.py  test_credential_store.py  test_cross_language.py  test_cross_layer.py  test_db.py  test_db_maintenance_pg.py  test_destination_aware_scanning.py  test_domain_filtered_retrieval.py  test_domain_summary.py  test_domain_summary_generation.py  (+131 more)
ui/: app.js  index.html  login.html  login.js  manifest.json  settings.js  social-preview.html  style.css
(+268 files in other folders)
