[project]
name = "sentinel"
version = "0.2.0"
description = "Defence-in-depth AI assistant built on the CaMeL architecture"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.34.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pyyaml>=6.0,<7.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "python-json-logger>=3.0.0,<4.0.0",
    "transformers>=4.47.0,<5.0.0",
    "anthropic>=0.42.0,<1.0.0",
    "llamafirewall>=0.1.0,<2.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "sse-starlette>=2.0.0,<3.0.0",
    "croniter>=3.0.0,<4.0.0",
]

[project.optional-dependencies]
vec = [
    "sqlite-vec>=0.1.0,<1.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.25.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["sentinel*"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
