[package]
name = "sentinel-sidecar"
version = "0.1.0"
edition = "2021"
description = "WASM tool sandbox sidecar for Sentinel"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
